test-results4.txt
bun test v1.3.11 (af24e281)

tests\ChipPartitionsSolver.test.ts:

# Unhandled error between tests
-------------------------------
1 | })
2 | {
    ^
SyntaxError: Export named 'setStepOfAllObjects' not found in module 'C:\ai-dev-ops\task_02_tscircuit_matchpack\node_modules\graphics-debug\dist\lib\index.js'.
      at loadAndEvaluateModule (2:1)
-------------------------------


tests\test01.test.ts:
(pass) ...

tests\getInputProblemFromCircuitJsonSchematic\getInputProblemFromCircuitJsonSchematic01.test.tsx:

# Unhandled error between tests
-------------------------------
1 | })
2 | {
    ^
SyntaxError: Export named 'setStepOfAllObjects' not found in module 'C:\ai-dev-ops\task_02_tscircuit_matchpack\node_modules\graphics-debug\dist\lib\index.js'.
      at loadAndEvaluateModule (2:1)
-------------------------------


tests\IdentifyDecouplingCapsSolver\IdentifyDecouplingCapsSolver06.test.ts:

# Unhandled error between tests
-------------------------------
1 | })
2 | {
    ^
SyntaxError: Export named 'setStepOfAllObjects' not found in module 'C:\ai-dev-ops\task_02_tscircuit_matchpack\node_modules\graphics-debug\dist\lib\index.js'.
      at loadAndEvaluateModule (2:1)
-------------------------------


tests\LayoutPipelineSolver\LayoutPipelineSolver01.test.ts:

# Unhandled error between tests
-------------------------------
1 | })
2 | {
    ^
SyntaxError: Export named 'setStepOfAllObjects' not found in module 'C:\ai-dev-ops\task_02_tscircuit_matchpack\node_modules\graphics-debug\dist\lib\index.js'.
      at loadAndEvaluateModule (2:1)
-------------------------------


tests\LayoutPipelineSolver\LayoutPipelineSolver02.test.ts:

# Unhandled error between tests
-------------------------------
1 | })
2 | {
    ^
SyntaxError: Export named 'setStepOfAllObjects' not found in module 'C:\ai-dev-ops\task_02_tscircuit_matchpack\node_modules\graphics-debug\dist\lib\index.js'.
      at loadAndEvaluateModule (2:1)
-------------------------------


tests\LayoutPipelineSolver\LayoutPipelineSolver03.test.tsx:

# Unhandled error between tests
-------------------------------
1 | })
2 | {
    ^
SyntaxError: Export named 'setStepOfAllObjects' not found in module 'C:\ai-dev-ops\task_02_tscircuit_matchpack\node_modules\graphics-debug\dist\lib\index.js'.
      at loadAndEvaluateModule (2:1)
-------------------------------


tests\LayoutPipelineSolver\LayoutPipelineSolver04.test.ts:

# Unhandled error between tests
-------------------------------
1 | })
2 | {
    ^
SyntaxError: Export named 'setStepOfAllObjects' not found in module 'C:\ai-dev-ops\task_02_tscircuit_matchpack\node_modules\graphics-debug\dist\lib\index.js'.
      at loadAndEvaluateModule (2:1)
-------------------------------


tests\LayoutPipelineSolver\RP2040Circuit.test.ts:

# Unhandled error between tests
-------------------------------
1 | })
2 | {
    ^
SyntaxError: Export named 'setStepOfAllObjects' not found in module 'C:\ai-dev-ops\task_02_tscircuit_matchpack\node_modules\graphics-debug\dist\lib\index.js'.
      at loadAndEvaluateModule (2:1)
-------------------------------


tests\PartitionPackingSolver\PartitionPackingSolver01.test.ts:

# Unhandled error between tests
-------------------------------
1 | })
2 | {
    ^
SyntaxError: Export named 'setStepOfAllObjects' not found in module 'C:\ai-dev-ops\task_02_tscircuit_matchpack\node_modules\graphics-debug\dist\lib\index.js'.
      at loadAndEvaluateModule (2:1)
-------------------------------


 1 pass
 9 fail
 9 errors
Ran 10 tests across 10 files. [762.00ms]
